# jiracdflow

./: .dockerignore  .gitignore  Jenkinsfile  Makefile  README.md  manage.py  pyproject.toml  requirements.txt  uwsgi.ini
APP-META/: Dockerfile  entrypoint.sh
apollo/: apps.py  models.py  serializers.py  urls.py  views.py
apollo/migrations/: 0001_initial.py  0002_apolloapp_apolloinstance_delete_apolloappinfo_and_more.py
cicdflow/: apps.py  log_test.py  models.py  serializers.py  tasks.py  urls.py  views.py
cicdflow/migrations/: 0001_initial.py  0002_alter_jiraissue_code_info_and_more.py  0002_jiraworkflow_init_flag_alter_jiraworkflow_project.py  0003_alter_jiraissue_function_list.py  0003_sqlworkflow.py
config/: celery.conf  config.yaml.default  logger.conf
devops_tools/: asgi.py  urls.py  wsgi.py
devops_tools/settings/: base.py  dev.py  (+1 more)
doc/: celery.service  jiracdflow.jwb  jiracdflow.md  upgrade-cdflow-only-prod.jwb  upgrade-cdflow.jwb
jiracdflow/: asgi.py  urls.py  wsgi.py
util/: apollo_api.py  apollo_operate.py  archery_api.py  archery_operate.py  cicdflow_util.py  cmdb_api.py  email_tool.py  getlogger.py  jira-cdflow.jwb  jira_api.py  modify_kafka_topic.sh  pgsql_api.py  redis_client.py  svn_client.py  uat_db_operate.py  uat_del_third_accout_data.py
utils/: archery_api.py  cicdflow_util.py  cicdflow_utils.py  cmdb_api.py  email_tool.py  getconfig.py  git_utils.py  git_utils_example.py  gitlab_api.py  jira_api.py  jira_webhook_api.py  nacos_client.py  nacos_client_example.py  pgsql_api.py  redis_client.py  svn_client.py  tests.py  uat_db_operate.py
(+4 files in other folders)
