[tool.poetry]
name = "jiracdflow"
version = "0.1.0"
description = "jiracdflow"
authors = ["yakir"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.1.3"
djangorestframework = "3.14.0"
drf-yasg = "1.21.4"
jinja2 = "3.1.2"
jira = "3.4.1"
mysqlclient = "2.1.1"
ntlm-auth = "1.5.0"
pyyaml = "6.0"
redis = "4.4.2"
requests = "2.28.1"
sqlparse = "0.4.3"
svn = "1.0.1"
celery = "5.2.7"
psycopg2-binary = "2.9.6"
uwsgi = "2.0.21"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

#[[tool.poetry.source]]
#name = "tsinghua"
#url = "https://pypi.tuna.tsinghua.edu.cn/simple"
#default = true

#[[tool.poetry.source]]
#name = "aliyun"
#url = "https://mirrors.aliyun.com/pypi/simple"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
